Fix not being able to scroll while modals are open on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,3 @@
   text-transform: none;
 }
 
-body:has(.disable-scroll) {
-  overflow: hidden;
-}
